@@ -52,7 +52,6 @@ typedef enum{
 	tkCloseBracket = ']', // 93
 	tkPower = '^', // 94
 	tkLastResult = '_', // 95 (result of last ralcalc run - functionally equivalent to tkNumber)
-	tkExponent = 'e', // 101
 	tkMultiplyX = 'x', // 120
 	tkNegation = '~', // 126
 
