@@ -1,4 +1,4 @@
-.TH "ralcalc" "1" "16th June 2007" "" ""
+.TH "ralcalc" "1" "17th June 2007" "" ""
 .SH NAME
 ralcalc \- a simple command line calculator
 
@@ -156,14 +156,7 @@ Internal error: If an unknown error code is passed to the error output function,
 .I At least one error occurred.
 
 .SH BUGS
-Negation of a number is given the highest precedent:
-.PP
-.RS
-= -3^2
-.br
--3^2 = 9
-.RE
-This should be -9.
+None known...
 
 .SH AUTHOR
 Roger Light <roger@atchoo.org>
